# atlc

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.--enable-hardware-info  README.aix  README.alpha  README.benchmark  README.checks  README.cvs  README.help  README.mpi  README.solaris  README.tests  README.threads  README.windows  THANKS  TODO  WARNING  aclocal.m4  buildme  configure  configure.ac  configure.in  create_for_Makefile.am  cvsignore  footer  md5sum.txt  teston  update
docs/html-docs/: BUGS.html  FAQ.html  IMPORTANT.html  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.html  accuracy.html  an_example_of_using_design_coupler.html  atlc-gui.h  atlc.1.html  atlc.cpp  banner.html  bmp.html  building.html  calculate_zodd_and_zeve.html  calculate_zodd_and_zeven.html  circ_in_circ.1.html  circ_in_rect.1.html  coax.1.html  colours.html  couplers.html  create_bmp_for_circ_in_circ.1.html  create_bmp_for_circ_in_rect.1.html  create_bmp_for_microstrip_coupler.1.html  create_bmp_for_rect_cen_in_rect.1.html  create_bmp_for_rect_in_circ.1.html  create_bmp_for_rect_in_rect.1.html  create_bmp_for_stripline_coupler.1.html  create_bmp_for_symmetrical_stripline.1.html  create_for_Makefile.am  cvsignore  determine_dimensions_of_couplers.html  directional_coupler.html  donations.html  dualcoax.1.html  errors.html  examples.html  fileformat.html  (+26 more)
examples/: 13inner_22outer_coax.bmp.txt  Makefile.am  Makefile.in  README  bigger_not_in_centre.bmp.txt  coax-500-100.bmp.txt  coax-500-200-Er-100.bmp.txt  coax-500-200.bmp.txt  coax-500-25.bmp.txt  coax-500-400.bmp.txt  coax-500-50.bmp.txt  coax2.bmp.txt  coaxtest.bmp.txt  coaxtest2.bmp.txt  cop1.bmp.txt  coupler.bmp.txt  create  mix.bmp.txt  multi-dielectric.bmp.txt  not-aliased.bmp.txt  not_in_centre.bmp.txt  off-centre-coax.bmp.txt  offset.bmp.txt  pcb-coupler.bmp.txt  pcb.bmp.txt  test-coupler1.bmp.txt  test.bmp.txt  test3.bmp.txt  test4.bmp.txt  test6.bmp.txt  test7.bmp.txt  twin-wire.bmp.txt  twin-wire2.bmp.txt  twin-wire3.bmp.txt  twin-wire4.bmp.txt  ushape.bmp.txt  very-odd.bmp.txt  wide-9pixel.bmp.txt
src/: DO_NOT_EDIT_THIS_FILE  Erdata.h  Makefile.am  Makefile.in  README  align_bitmap_image.c  atlc.c  bmp.h  byteswap.c  calc_coupler.c  calculate_Zodd_and_Zeven.c  calculate_colour_data.c  calculate_integer_values.c  calculate_sym_strip_impedance.c  check_circ_in_circ.c  check_circ_in_rect.c  check_error.c  check_for_boundaries.c  check_for_shorts.c  check_rect_in_circ.c  check_rect_in_rect.c  circ_in_circ.c  circ_in_rect.c  configure  configure.in  convert_circ_in_circ_dimensions_to_integers.c  convert_circ_in_rect_dimensions_to_integers.c  convert_rect_in_circ_dimensions_to_integers.c  convert_rect_in_rect_dimensions_to_integers.c  couplers.txt  create  definitions.h  design_coupler.c  do_fd_calculation.c  elliptic_integral.c  error_and_exit.c  fill_circ_in_circ.c  fill_circ_in_rect.c  fill_image_vector_for_sym_strip.c  fill_make_coupler.c  (+42 more)
src/gui/: CircInRect.xpm  CoaxFrm.cpp  CoaxFrm.h  EFieldFrame.cpp  EFieldFrame.h  EccentricCoax.xpm  EccentricCoaxFrame.cpp  EccentricCoaxFrame.h  EnergyFrame.cpp  EnergyFrame.h  ExFieldFrame.cpp  ExFieldFrame.h  EyFieldFrame.cpp  EyFieldFrame.h  FD.xpm  FiniteDifference.xpm  FiniteDifferenceFrame.cpp  FiniteDifferenceFrame.h  Makefile.am  Makefile.in  PermittivityFrame.cpp  PermittivityFrame.h  README  RectInCirc.xpm  RectInRect.xpm  RoundCoax.cpp  RoundCoax.xpm  RoundCoaxFrm.cpp  RoundCoaxFrm.h  SquareCoax.xpm  SquareOuterRoundInner.xpm  StriplineCoupler.xpm  SymmetricalStripline.xpm  VoltageFrame.cpp  VoltageFrame.h  atlc-gui.h  atlc.cpp  atlc.xpm  atlcApp.cpp  atlcApp.h  (+14 more)
src/non_gui/: .cvsignore  Erdata.h  Makefile.am  Makefile.in  README  align_bitmap_image.c  atlc.c  atlc_old.c  bmp.h  byteswap.c  calculate_Zodd_and_Zeven.c  calculate_colour_data.c  calculate_integer_values.c  check_circ_in_circ.c  (+125 more)
tests/: .cvsignore  10a-create-lots-of-examples-check-last-one.test  10b-create-lots-of-examples-check-last-one.test  11a-verify-checksum-of-supplied-cop1.bmp.test  11a-verify-checksum-of-supplied-test-coupler1.bmp.test  11b-verify-checksum-of-created-cop1.Ex.odd.bmp.test  11b-verify-checksum-of-created-test-coupler1.Ex.odd.bmp.test  11c-verify-checksum-of-created-cop1.Ey.odd.bmp.test  11c-verify-checksum-of-created-test-coupler1.Ey.odd.bmp.test  11d-verify-checksum-of-created-cop1.E.odd.bmp.test  11d-verify-checksum-of-created-test-coupler1.E.odd.bmp.test  11e-verify-checksum-of-created-cop1.V.odd.bmp.test  11e-verify-checksum-of-created-test-coupler1.V.odd.bmp.test  11f-verify-checksum-of-created-cop1.U.odd.bmp.test  11f-verify-checksum-of-created-test-coupler1.U.odd.bmp.test  11g-verify-checksum-of-created-cop1.Er.bmp.test  11g-verify-checksum-of-created-test-coupler1.Er.bmp.test  11h-verify-checksum-of-created-cop1.Ex.even.bmp.test  11h-verify-checksum-of-created-test-coupler1.Ex.even.bmp.test  11i-verify-checksum-of-created-cop1.Ey.even.bmp.test  11i-verify-checksum-of-created-test-coupler1.Ey.even.bmp.test  11j-verify-checksum-of-created-cop1.E.even.bmp.test  11j-verify-checksum-of-created-test-coupler1.E.even.bmp.test  11k-verify-checksum-of-created-cop1.U.even.bmp.test  11k-verify-checksum-of-created-test-coupler1.U.even.bmp.test  11l-verify-checksum-of-created-cop1.V.even.bmp.test  11l-verify-checksum-of-created-test-coupler1.V.even.bmp.test  12c-verify-checksum-of-created-test-coupler1.Ey.odd.bin.test  12d-verify-checksum-of-created-test-coupler1.E.odd.bin.test  12e-verify-checksum-of-created-test-coupler1.V.odd.bin.test  12f-verify-checksum-of-created-test-coupler1.U.odd.bin.test  12g-verify-checksum-of-created-test-coupler1.Er.bin.test  12h-verify-checksum-of-created-test-coupler1.Ex.even.bin.test  12i-verify-checksum-of-created-test-coupler1.Ey.even.bin.test  12j-verify-checksum-of-created-test-coupler1.E.even.bin.test  12k-verify-checksum-of-created-test-coupler1.U.even.bin.test  12l-verify-checksum-of-created-test-coupler1.V.even.bin.test  13a-check_rect_cen_in_rect.test  13b-check_rect_cen_in_rect.test  13c-check_rect_cen_in_rect.test  (+136 more)
(+56 files in other folders)
