# This is Makefile.am, which is proceed by automake
AUTOMAKE_OPTIONS = gnits

SUBDIRS =  . src man docs examples tools tests 

EXTRA_DIST = \
README \
README.checks \
README.cvs \
README.help \
README.mpi \
README.solaris \
README.support \
README.threads \
README.windows \
BUGS \
stoptests \
acx_pthread.m4 \
gtk.m4 \
TODO

CLEANFILES = examplestest-coupler2.bmp.txt
DISTCLEANFILES = examplestest-coupler2.bmp.txt
