# This is Makefile.am, which is proceed by automake
#AUTOMAKE_OPTIONS = gnits
ACLOCAL_AMFLAGS = -I m4

SUBDIRS =  . src m4 man docs examples tools tests 

EXTRA_DIST = \
README \
README.checks \
README.cvs \
README.help \
README.mpi \
README.solaris \
README.support \
README.threads \
README.windows \
README.--enable-hardware-info \
BUGS \
compile \
missing \
teston \
TODO

CLEANFILES = examplestest-coupler2.bmp.txt
DISTCLEANFILES = examplestest-coupler2.bmp.txt
